--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuda | Awesome single page template</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Cuda | Awesome single page</title>
+    <!--GOOGLE FONTS-->
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!--VENDORS FILE-->
+    <link rel="stylesheet" href="vendors/css/normalize.css">
+    <link rel="stylesheet" href="vendors/css/grid.css">
+    <!--RESOURCES FILE-->
+    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/responsive.css">
 </head>
 <body>
-    
+    <div class="col span_1_of_2">Hello</div>
+    <div class="col span_1_of_2">World</div>
+
+    <!--JS SCRIPT-->
+    <script src="https://kit.fontawesome.com/e8c569ef19.js" crossorigin="anonymous"></script>
+    <script src="vendors/js/html5shiv.min.js"></script>
+    <script src="vendors/js/respond.min.js"></script>
+    <script src="vendors/js/selectivizr-min.js"></script>
 </body>
 </html>
