--- a/index.html
+++ b/index.html
@@ -15,8 +15,65 @@
     <link rel="stylesheet" href="resources/css/responsive.css">
 </head>
 <body>
-    <div class="col span_1_of_2">Hello</div>
-    <div class="col span_1_of_2">World</div>
+    <!--START HEADER SECTION-->
+    <header>
+        <div class="row">
+            <nav>
+                <a href="#">
+                    <img src="resources/img/logo.png" alt="Logo" class="logo">
+                </a>
+                <ul class="main-nav">
+                    <li class="active"><a href="#">home</a></li>
+                    <li><a href="#service">service</a></li>
+                    <li><a href="#">work</a></li>
+                    <li><a href="#">blog</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="row">
+            <div class="hero-text-box">
+                <h1>Hi there! We are the new kids on the block and we build awesome websites and mobile apps.</h1>
+                <a class="btn btn-hero" href="#">WORK WITH US!</a>
+            </div>
+        </div>
+    </header>
+    <!--END HEADER SECTION-->
+
+    <!--START SERVICES SECTION-->
+    <section class="services-section" id="service">
+        <div class="row">
+            <h2>SERVICES WE PROVIDE</h2>
+            <p class="little-description">We are working with both individuals and businesses from all over the globe to create awesome websites and applications.</p>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4 box">
+                <img src="./resources/img/flag.png" alt="Flag" class="services-icon">
+                <h3>Branding</h3>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+            </div>
+            <div class="col span_1_of_4 box">
+                <img src="./resources/img/crayon.png" alt="crayon" class="services-icon">
+                <h3>Design</h3>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetuer adipiscing elit, sed diam nonummy nibh</p>
+            </div>
+            <div class="col span_1_of_4 box">
+                <img src="./resources/img/gears.png" alt="gears" class="services-icon">
+                <h3>Development</h3>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetuer adipiscing elit, sed diam nonummy nibh</p>
+            </div>
+            <div class="col span_1_of_4 box">
+                <img src="./resources/img/rocket.png" alt="Rocket Science" class="services-icon">
+                <h3>ROCKET SCIENCE</h3>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetuer adipiscing elit, sed diam nonummy nibh</p>
+            </div>
+        </div>
+    </section>
+    <!--END SERVICES SECTION-->
 
     <!--JS SCRIPT-->
     <script src="https://kit.fontawesome.com/e8c569ef19.js" crossorigin="anonymous"></script>
