--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <ul class="main-nav">
                     <li class="active"><a href="#">home</a></li>
                     <li><a href="#service">service</a></li>
+                    <li><a href="#team">Team</a></li>
                     <li><a href="#">work</a></li>
                     <li><a href="#">blog</a></li>
                     <li><a href="#">contact</a></li>
@@ -74,6 +75,72 @@
         </div>
     </section>
     <!--END SERVICES SECTION-->
+
+    <!--START TEAM SECTION-->
+    <section class="team-section" id="team">
+        <div class="row">
+            <h2>MEET OUR BEAUTIFUL TEAM</h2>
+            <p class="little-description">We are a small team of designers and developers, who help brands with big ideas.</p>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4 box">
+                <img src="/resources/img/1.jpg" alt="ANNE HATHAWAY" class="team-member">
+                <h4>ANNE HATHAWAY</h4>
+                <span class="role">CEO / Marketing Guru</span>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                    <div class="social-icon">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+            </div>
+            <div class="col span_1_of_4 box">
+                <img src="/resources/img/2.jpg" alt="Kate Upton" class="team-member">
+                <h4>Kate Upton</h4>
+                <span class="role">Creative Director</span>
+                <p>Duis aute irure dolor in in voluptate velit esse cillum dolore fugiat nulla pariatur. Excepteur sint occaecat non diam proident.</p>
+                    <div class="social-icon">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+            </div>
+            <div class="col span_1_of_4 box">
+                <img src="/resources/img/3.jpg" alt="Olivia Wilde" class="team-member">
+                <h4>Olivia Wilde</h4>
+                <span class="role">Lead Designer</span>
+                <p>Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem nesciunt.</p>
+                    <div class="social-icon">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+            </div>
+            <div class="col span_1_of_4 box">
+                <img src="/resources/img/4.jpg" alt="Ashley Greene" class="team-member">
+                <h4>Ashley Greene</h4>
+                <span class="role">SEO / Developer</span>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                    <div class="social-icon">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <!--END TEAM SECTION-->
 
     <!--JS SCRIPT-->
     <script src="https://kit.fontawesome.com/e8c569ef19.js" crossorigin="anonymous"></script>
