img src path fixed

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="row">
             <div class="col span_1_of_4 box">
-                <img src="/resources/img/1.jpg" alt="ANNE HATHAWAY" class="team-member">
+                <img src="resources/img/1.jpg" alt="ANNE HATHAWAY" class="team-member">
                 <h4>ANNE HATHAWAY</h4>
                 <span class="role">CEO / Marketing Guru</span>
                 <p>Lorem ipsum dolor sit amet, 
@@ -99,7 +99,7 @@
                     </div>
             </div>
             <div class="col span_1_of_4 box">
-                <img src="/resources/img/2.jpg" alt="Kate Upton" class="team-member">
+                <img src="resources/img/2.jpg" alt="Kate Upton" class="team-member">
                 <h4>Kate Upton</h4>
                 <span class="role">Creative Director</span>
                 <p>Duis aute irure dolor in in voluptate velit esse cillum dolore fugiat nulla pariatur. Excepteur sint occaecat non diam proident.</p>
@@ -112,7 +112,7 @@
                     </div>
             </div>
             <div class="col span_1_of_4 box">
-                <img src="/resources/img/3.jpg" alt="Olivia Wilde" class="team-member">
+                <img src="resources/img/3.jpg" alt="Olivia Wilde" class="team-member">
                 <h4>Olivia Wilde</h4>
                 <span class="role">Lead Designer</span>
                 <p>Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem nesciunt.</p>
@@ -126,7 +126,7 @@
                     </div>
             </div>
             <div class="col span_1_of_4 box">
-                <img src="/resources/img/4.jpg" alt="Ashley Greene" class="team-member">
+                <img src="resources/img/4.jpg" alt="Ashley Greene" class="team-member">
                 <h4>Ashley Greene</h4>
                 <span class="role">SEO / Developer</span>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
