--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cuda | Awesome single page</title>
+    <link rel="shortcut icon" href="resources/img/favicon.ico" type="image/x-icon">
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!--VENDORS FILE-->
@@ -28,9 +29,9 @@
                     <li><a href="#service">service</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#skill">skill</a></li>
-                    <li><a href="#">work</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="#portfolio">portfolio</a></li>
+                    <li><a href="#testimonial">testimonial</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -188,7 +189,139 @@
     </section>
     <!--END SKILL SECTION-->
 
+    <!--START PORTFOLIO SECTION-->
+    <section class="portfolio-section" id="portfolio">
+        <div class="row">
+            <h2>OUR PORTFOLIO</h2>
+            <p class="little-description">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet
+                consectetur, adipisci velit, sed quia non numquam</p>
+        </div>
+        <div class="row">
+            <div class="portfolio-filter">
+                <button type="button" data-filter="all">all</button>
+                <button type="button" data-filter=".web">web</button>
+                <button type="button" data-filter=".apps">apps</button>
+                <button type="button" data-filter=".icons">icons</button>
+            </div>
+        </div>
+        <div class="row container">
+            <div class="col span_1_of_2 mix apps icons box">
+                <img src="resources/img/portfolio1.png" alt="Isometric Perspective Mock-Up" class="portfolio-img">
+                <h4>Isometric Perspective Mock-Up</h4>
+            </div>
+            <div class="col span_1_of_2 mix web apps box">
+                <img src="resources/img/portfolio2.png" alt="Time Zone App UI" class="portfolio-img">
+                <h4>Time Zone App UI</h4>
+            </div>
+            <div class="col span_1_of_2 mix icons apps box">
+                <img src="resources/img/portfolio3.png" alt="Viro Media Players UI" class="portfolio-img">
+                <h4>Viro Media Players UI</h4>
+            </div>
+            <div class="col span_1_of_2 mix icons web box">
+                <img src="resources/img/portfolio4.png" alt="Isometric Perspective Mock-Up" class="portfolio-img">
+                <h4>Blog / Magazine Flat UI Kit</h4>
+            </div>
+        </div>
+        <div class="row">
+            <a href="#" class="btn btn-load-more">LOAD MORE PROJECTS</a>
+        </div>
+    </section>
+    <!--END PORTFOLIO SECTION-->
 
+    <!--START TESTIMONIAL SECTION-->
+    <section class="testimonial-section" id="testimonial">
+        <div class="row">
+            <h2>WHAT POEPLE SAY ABOUT US</h2>
+            <p class="little-description">Our clients love us!</p>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/1.jpg" alt="Chanel Iman">
+                </div>
+                <div class="client-review">
+                    <p>“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
+                    <h3>Chanel Iman</h3>
+                    <span class="role">CEO of Pinterest</span>
+                </div>
+            </div>
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/2.jpg" alt="ADRIANA LIMA">
+                </div>
+                <div class="client-review">
+                    <p>“Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”</p>
+                    <h3>ADRIANA LIMA</h3>
+                    <span class="role">Founder of Instagram</span>
+                </div>
+            </div>
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/3.jpg" alt="ANNE HATHAWAY">
+                </div>
+                <div class="client-review">
+                    <p>“Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”</p>
+                    <h3>ANNE HATHAWAY</h3>
+                    <span class="role">Lead Designer at Behance</span>
+                </div>
+            </div>
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/4.jpg" alt="EMMA STONE">
+                </div>
+                <div class="client-review">
+                    <p>“Phasellus non purus vel arcu tempor commodo. Fusce semper, purus vel luctus molestie, risus sem cursus neque.”</p>
+                    <h3>EMMA STONE</h3>
+                    <span class="role">Co-Founder of Shazam</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--END TESTIMONIAL SECTION-->
+
+    <!--START CONTACT SECTION-->
+    <section class="contact-section" id="contact">
+        <div class="row">
+            <h2>GET IN TOUCH</h2>
+            <p class="little-description">1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</p>
+        </div>
+        <div class="row">
+            <form action="https://formspree.io/f/mjvprnwk" method="POST">
+                <div class="row">
+                    <div class="col span_1_of_2">
+                        <input type="text" name="Name" placeholder="Your Name *" required>
+                    </div>
+                    <div class="col span_1_of_2">
+                        <input type="email" name="Email" placeholder="Your Email *" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <textarea name="Message" cols="30" rows="10" placeholder="Your Message *" required></textarea>
+                </div>
+                <div class="row">
+                    <input type="submit" value="SEND MESSAGE" class="btn send-message-btn">
+                </div>
+            </form>
+        </div>
+    </section>
+    <!--END CONTACT SECTION-->
+
+    <!--START FOOTER SECTION-->
+    <footer class="footer-section">
+        <div class="row">
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Google+</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Behance</a></li>
+                <li><a href="#">Dribbble</a></li>
+                <li><a href="#">GitHub</a></li>
+            </ul>
+        </div>
+    </footer>
+    <!--END FOOTER SECTION-->
+   
     <!--JS SCRIPT-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e8c569ef19.js" crossorigin="anonymous"></script>
@@ -196,6 +329,7 @@
     <script src="vendors/js/respond.min.js"></script>
     <script src="vendors/js/selectivizr-min.js"></script>
     <script src="vendors/js/animated-circle.js"></script>
+    <script src="vendors/js/mixitup.min.js"></script>
     <script src="resources/js/main.js"></script>
 </body>
 </html>
