--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </head>
 <body>
     <!--START HEADER SECTION-->
-    <header>
-        <div class="row">
-            <nav>
-                <a href="#">
+    <header id="home">
+        <nav>
+            <div class="row">
+                <a href="#home">
                     <img src="resources/img/logo.png" alt="Logo" class="logo">
                 </a>
                 <ul class="main-nav">
-                    <li class="active"><a href="#">home</a></li>
+                    <li class="active"><a href="#home">home</a></li>
                     <li><a href="#service">service</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#skill">skill</a></li>
@@ -33,8 +33,8 @@
                     <li><a href="#testimonial">testimonial</a></li>
                     <li><a href="#contact">contact</a></li>
                 </ul>
-            </nav>
-        </div>
+            </div>
+        </nav>
         <div class="row">
             <div class="hero-text-box">
                 <h1>Hi there! We are the new kids on the block and we build awesome websites and mobile apps.</h1>
@@ -45,7 +45,7 @@
     <!--END HEADER SECTION-->
 
     <!--START SERVICES SECTION-->
-    <section class="services-section" id="service">
+    <section class="services-section js--services-section" id="service">
         <div class="row">
             <h2>SERVICES WE PROVIDE</h2>
             <p class="little-description">We are working with both individuals and businesses from all over the globe to create awesome websites and applications.</p>
@@ -328,6 +328,7 @@
     <script src="vendors/js/html5shiv.min.js"></script>
     <script src="vendors/js/respond.min.js"></script>
     <script src="vendors/js/selectivizr-min.js"></script>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="vendors/js/animated-circle.js"></script>
     <script src="vendors/js/mixitup.min.js"></script>
     <script src="resources/js/main.js"></script>
