--- a/index.html
+++ b/index.html
@@ -33,12 +33,27 @@
                     <li><a href="#testimonial">testimonial</a></li>
                     <li><a href="#contact">contact</a></li>
                 </ul>
+                <div class="mobile-menu">
+                    <span onclick="openNav()">&#9776;</span>
+                    <div id="myNav" class="overlay">
+                        <a href="javascript:void(0)" onclick="closeNav()" class="closebtn">&times;</a>
+                        <div class="overlay-content">
+                            <a onclick="closeNav()" href="#home">home</a>
+                            <a onclick="closeNav()" href="#service">service</a>
+                            <a onclick="closeNav()" href="#team">Team</a>
+                            <a onclick="closeNav()" href="#skill">skill</a>
+                            <a onclick="closeNav()" href="#portfolio">portfolio</a>
+                            <a onclick="closeNav()" href="#testimonial">testimonial</a>
+                            <a onclick="closeNav()" href="#contact">contact</a> 
+                        </div>
+                    </div>
+                </div>
             </div>
         </nav>
         <div class="row">
             <div class="hero-text-box">
                 <h1>Hi there! We are the new kids on the block and we build awesome websites and mobile apps.</h1>
-                <a class="btn btn-hero" href="#">WORK WITH US!</a>
+                <a class="btn btn-hero" href="#contact">WORK WITH US!</a>
             </div>
         </div>
     </header>
