--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cuda is a awesome portfolio psd template ! you can download free and use perfectly. Made by Md Nazmul Haque">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cuda | Awesome single page</title>
     <link rel="shortcut icon" href="resources/img/favicon.ico" type="image/x-icon">
