--- a/index.html
+++ b/index.html
@@ -348,5 +348,16 @@
     <script src="vendors/js/animated-circle.js"></script>
     <script src="vendors/js/mixitup.min.js"></script>
     <script src="resources/js/main.js"></script>
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GNP6WG61"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z3GNP6WG61');
+    </script>
 </body>
 </html>
