--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!--VENDORS FILE-->
-    <link rel="stylesheet" href="vendors/css/normalize.css">
-    <link rel="stylesheet" href="vendors/css/grid.css">
+    <link rel="stylesheet" href="vendors/css/normalize.min.css">
+    <link rel="stylesheet" href="vendors/css/grid.min.css">
     <!--RESOURCES FILE-->
-    <link rel="stylesheet" href="resources/css/style.css">
-    <link rel="stylesheet" href="resources/css/responsive.css">
+    <link rel="stylesheet" href="resources/css/style.min.css">
+    <link rel="stylesheet" href="resources/css/responsive.min.css">
 </head>
 <body>
     <!--START HEADER SECTION-->
