add js minify path

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="vendors/js/animated-circle.min.js"></script>
     <script src="vendors/js/mixitup.min.js"></script>
-    <script src="resources/js/main.js"></script>
+    <script src="resources/js/main.min.js"></script>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
